Fixup missing color refs

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -22,6 +22,8 @@
 @hue-6:   hsl(282, 82%, 80%); // <-orange 1
 @hue-6-2: hsl(264, 86%, 70%); // <-orange 2
 
+@light-gray: @mono-1;
+@cyan: @hue-1;
 
 // Base colors -----------------------------------
 @syntax-fg:     @mono-1;
